--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Security Headers -->
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
     <meta name="referrer" content="strict-origin-when-cross-origin" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https:; img-src 'self' data: blob: https://*.supabase.co https://storage.googleapis.com;" />
     
     <!-- Preload critical resources for better LCP -->
     <link rel="preload" href="/src/index.css" as="style" />
