`Remove local security headers and move to Vercel configuration`

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MIHAS Application System</title>
     
-    <!-- Security Headers -->
-    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-    <meta name="referrer" content="strict-origin-when-cross-origin" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https:; img-src 'self' data: blob: https://*.supabase.co https://storage.googleapis.com;" />
+    <!-- Security Headers handled by server -->
     
     <!-- Preload critical resources for better LCP -->
     <link rel="preload" href="/src/index.css" as="style" />
